--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@example/example-lib2",
-  "private": false,
   "version": "1.0.2",
   "license": "UNLICENSED",
-  "author": {
-    "name": "NetEnt AB (publ)",
-    "email": "info@netent.com",
-    "url": "https://www.netent.com/"
-  },
+  "private": false,
   "engines": {
     "node": ">= 10.x",
-    "yarn": ">= 1.12.x",
-    "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
+    "npm": ">= 999-this-repo-is-yarn-only:see-npmrc",
+    "yarn": ">= 1.12.x"
+  },
+  "author": {
+    "email": "info@netent.com",
+    "name": "NetEnt AB (publ)",
+    "url": "https://www.netent.com/"
   },
   "main": "src/index.ts",
+  "files": [
+    "dist/*",
+    "index.d.ts"
+  ],
   "scripts": {
     "build": "yarn clean && yarn compile:js",
     "clean": "npx starterkit-clean",
@@ -23,16 +27,12 @@
     "lint": "npx eslint . --ignore-path=../../.eslintignore --ext js --ext ts --fix",
     "test": "jest -w 3 --detectOpenHandles --notify"
   },
-  "files": [
-    "dist/*",
-    "index.d.ts"
-  ],
-  "bundledDependencies": [],
-  "devDependencies": {
-    "@netent/starterkit": "*"
-  },
   "dependencies": {
     "@example/example-lib1": "*",
     "ts-node": "8.3.0"
-  }
+  },
+  "devDependencies": {
+    "@netent/starterkit": "*"
+  },
+  "bundledDependencies": []
 }
