--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "@netent/starterkit-playground",
-  "description": "Starterkit is a `batteries included` base for creating awesome software using Typescript and best practices within Netent",
   "version": "1.0.0",
+  "description": "Starterkit is a `batteries included` base for creating awesome software using Typescript and best practices within Netent",
+  "license": "UNLICENSED2",
   "private": true,
-  "license": "UNLICENSED",
-  "author": {
-    "name": "NetEnt AB (publ)",
-    "email": "info@netent.com",
-    "url": "https://www.netent.com/"
+  "engines": {
+    "node": ">= 10.x",
+    "npm": ">= 999-this-repo-is-yarn-only:see-npmrc",
+    "yarn": ">= 1.12.x"
   },
-  "maintainers": [
-    "Johan Borestad <johan.borestad@netent.com>"
-  ],
-  "homepage": "https://git.netent.com/projects/GS/repos/starterkit",
   "bugs": {
     "url": "https://jira.netent.com/secure/RapidBoard.jspa?rapidView=1587"
   },
-  "engines": {
-    "node": ">= 10.x",
-    "yarn": ">= 1.12.x",
-    "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
+  "homepage": "https://git.netent.com/projects/GS/repos/starterkit",
+  "author": {
+    "email": "info@netent.com",
+    "name": "NetEnt AB (publ)",
+    "url": "https://www.netent.com/"
   },
   "workspaces": [
     ".starterkit",
@@ -38,12 +35,15 @@
     "postinstall": "npx starterkit-postinstall",
     "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "npx run-p -l test:unit test:e2e",
-    "test:unit": "npx jest -w 3",
     "test:e2e": "npx lerna run test:e2e --stream",
     "test:serial": "npx lerna exec -- yarn test",
+    "test:unit": "npx jest -w 3",
     "test:watch": "npx yarn test -- --watch --notify",
     "validate": "node node_modules/@netent/starterkit/bin/validate"
   },
+  "maintainers": [
+    "Johan Borestad <johan.borestad@netent.com>"
+  ],
   "prettier": {
     "bracketSpacing": true,
     "jsxBracketSameLine": true,
