add type-fest for simplicity purposes

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "lerna": "^3.16.4",
     "ts-jest": "24.0.2",
     "ts-node": "8.3.0",
+    "type-fest": "0.7.1",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
