--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -30,6 +30,7 @@
     "execa": "2.0.3",
     "figures": "3.0.0",
     "fs-extra": "8.1.0",
+    "get-folder-size": "2.0.1",
     "glob": "7.1.4",
     "husky": "3.0.3",
     "is-ci": "2.0.0",
@@ -41,6 +42,7 @@
     "pkg-up": "3.1.0",
     "prettier": "1.18.2",
     "ts-node": "8.3.0",
-    "yarn": "1.17.3"
+    "yarn": "1.17.3",
+    "yarn-deduplicate": "1.1.1"
   }
 }
