Moving out deps to .starterkit

--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -15,25 +15,51 @@
     "lint": "npx eslint . --ext js --ext ts --fix",
     "test": "exit 0 || true"
   },
-  "dependencies": {
-    "format-package": "5.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/node": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "7.5.5",
+    "@babel/runtime-corejs3": "7.5.5",
     "@jest/types": "24.8.0",
     "@types/fs-extra": "8.0.0",
+    "@types/jest": "24.0.17",
     "@types/lodash": "4.14.136",
+    "@typescript-eslint/eslint-plugin": "1.13.0",
+    "@typescript-eslint/parser": "1.13.0",
+    "babel-plugin-loop-optimizer": "1.4.1",
     "blend-promise-utils": "1.24.0",
     "chalk": "2.4.2",
     "cloc": "2.5.0",
     "del-cli": "2.0.0",
     "diff-so-fancy": "1.2.5",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-config-standard": "13.0.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-sonarjs": "0.4.0",
+    "eslint-plugin-standard": "4.0.0",
+    "eslint-plugin-unicorn": "10.0.0",
     "execa": "2.0.3",
     "figures": "3.0.0",
+    "format-package": "5.2.0",
     "fs-extra": "8.1.0",
     "get-folder-size": "2.0.1",
     "glob": "7.1.4",
     "husky": "3.0.3",
     "is-ci": "2.0.0",
+    "jest": "24.8.0",
+    "jest-cli": "24.8.0",
+    "lerna": "^3.16.4",
     "lint-staged": "9.2.1",
     "lodash": "4.17.15",
     "node-notifier": "5.4.1",
@@ -41,7 +67,10 @@
     "ora": "3.4.0",
     "pkg-up": "3.1.0",
     "prettier": "1.18.2",
+    "ts-jest": "24.0.2",
     "ts-node": "8.3.0",
+    "type-fest": "0.7.1",
+    "typescript": "^3.5.3",
     "yarn": "1.17.3",
     "yarn-deduplicate": "1.1.1"
   }
