--- a/package.json
+++ b/package.json
@@ -54,39 +54,7 @@
     "trailingComma": "none",
     "useTabs": false
   },
-  "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/node": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/register": "7.5.5",
-    "@babel/runtime-corejs3": "7.5.5",
-    "@types/jest": "24.0.17",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
-    "babel-plugin-loop-optimizer": "1.4.1",
-    "eslint": "6.1.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-config-standard": "13.0.1",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-sonarjs": "0.4.0",
-    "eslint-plugin-standard": "4.0.0",
-    "eslint-plugin-unicorn": "10.0.0",
-    "jest": "24.8.0",
-    "jest-cli": "24.8.0",
-    "lerna": "^3.16.4",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.3.0",
-    "type-fest": "0.7.1",
-    "typescript": "^3.5.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@netent/starterkit": "*"
   }
