--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "compile:packages": "npx lerna run compile --parallel --stream",
     "fix": "npx yarn prettier && yarn lint",
     "lint": "npx run-s lint:*",
-    "lint:js": "npx eslint . --ext js --ext ts --fix",
+    "lint:js": "DEBUG=eslint:cli-engine npx eslint . --ext js --ext ts --fix",
     "postinstall": "npx starterkit-postinstall",
     "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "npx run-p -l test:unit test:e2e",
