--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -15,11 +15,6 @@
     "test": "jest -w 4 --detectOpenHandles --notify"
   },
   "dependencies": {
-    "ts-node": "8.3.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@netent/starterkit": "*",
     "babylonjs": "4.0.3",
     "babylonjs-gui": "4.0.3",
     "babylonjs-loaders": "4.0.3",
@@ -28,5 +23,9 @@
     "cannon": "0.6.2",
     "parcel-bundler": "1.12.3",
     "pep": "1.0.13"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.5.5",
+    "@netent/starterkit": "*"
   }
 }
