--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -15,42 +15,45 @@
     "lint": "npx eslint . --ext js --ext ts --fix",
     "test": "exit 0 || true"
   },
-  "dependencies": {},
+  "dependencies": {
+    "envinfo": "7.3.1"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/node": "7.5.5",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "7.6.0",
+    "@babel/node": "7.6.1",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/register": "7.5.5",
-    "@babel/runtime-corejs3": "7.5.5",
+    "@babel/plugin-transform-runtime": "7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-typescript": "^7.6.0",
+    "@babel/register": "7.6.0",
+    "@babel/runtime-corejs3": "7.6.0",
     "@jest/types": "24.9.0",
     "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.18",
     "@types/lodash": "4.14.138",
-    "@typescript-eslint/eslint-plugin": "2.1.0",
-    "@typescript-eslint/parser": "2.1.0",
+    "@typescript-eslint/eslint-plugin": "2.3.0",
+    "@typescript-eslint/parser": "2.3.0",
     "babel-plugin-loop-optimizer": "1.4.1",
     "blend-promise-utils": "1.24.1",
     "chalk": "2.4.2",
     "cloc": "2.5.0",
-    "del-cli": "2.0.0",
+    "del-cli": "3.0.0",
     "diff-so-fancy": "1.2.7",
-    "eslint": "6.3.0",
-    "eslint-config-prettier": "6.2.0",
+    "eslint": "6.4.0",
+    "eslint-config-prettier": "6.3.0",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-node": "9.2.0",
-    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-node": "10.0.0",
+    "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-sonarjs": "0.4.0",
     "eslint-plugin-standard": "4.0.1",
-    "eslint-plugin-unicorn": "10.0.0",
+    "eslint-plugin-unicorn": "11.0.1",
     "execa": "2.0.4",
     "figures": "3.0.0",
+    "flexsearch": "0.6.30",
     "format-package": "5.2.0",
     "fs-extra": "8.1.0",
     "get-folder-size": "2.0.1",
@@ -67,10 +70,10 @@
     "ora": "3.4.0",
     "pkg-up": "3.1.0",
     "prettier": "1.18.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.3.0",
-    "type-fest": "0.7.1",
-    "typescript": "^3.6.2",
+    "ts-jest": "24.1.0",
+    "ts-node": "8.4.1",
+    "type-fest": "0.8.0",
+    "typescript": "^3.6.3",
     "yarn": "1.17.3",
     "yarn-deduplicate": "1.1.1"
   }
