--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npx lerna run build --parallel --stream",
+    "build": "lerna run build --parallel --stream",
     "ci": "node_modules/@netent/starterkit/bin/ci",
-    "clean": "npx starterkit-clean",
-    "compile": "npx run-p compile:*",
-    "compile:packages": "npx lerna run compile --parallel --stream",
-    "fix": "npx yarn prettier && yarn lint",
-    "lint": "npx run-s lint:*",
+    "clean": "starterkit-clean",
+    "compile": "run-p compile:*",
+    "compile:packages": "lerna run compile --parallel --stream",
+    "fix": "yarn prettier && yarn lint",
+    "lint": "run-s lint:*",
     "lint:js": "DEBUG=eslint:cli-engine npx eslint . --ext .js,.ts,.jsx,.tsx --fix",
-    "postinstall": "npx starterkit-postinstall",
-    "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
-    "test": "npx run-p -l test:unit test:e2e",
-    "test:e2e": "npx lerna run test:e2e --stream",
-    "test:serial": "npx lerna exec -- yarn test",
-    "test:unit": "npx jest -w 3 --config=.starterkit/config/jest.config.js",
-    "test:watch": "npx yarn test -- --watch --notify",
+    "postinstall": "starterkit-postinstall",
+    "prettier": "prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css,pug}\"",
+    "test": "run-p -l test:unit test:e2e",
+    "test:e2e": "lerna run test:e2e --stream",
+    "test:serial": "lerna exec -- yarn test",
+    "test:unit": "jest -w 3 --config=.starterkit/config/jest.config.js",
+    "test:watch": "yarn test -- --watch --notify",
     "validate": "node node_modules/@netent/starterkit/bin/validate"
   },
   "maintainers": [
